Create basic header menu

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,10 @@
-<nav class="flex left space-x-4">
-    <a href="/dashboard"
-        class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Home</a>
-    <a href="/team"
-        class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Team</a>
-    <a href="/projects"
-        class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Projects</a>
-    <a href="/reports"
-        class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:bg-slate-100 hover:text-slate-900">Reports</a>
+<nav class="flex left space-x-4 bg-gray-500">
+    <a href="#"
+        class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900 text-yellow-50">Home</a>
+    <a href="/MonHunDex"
+        class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900 text-yellow-50">MonHunDex</a>
+    <a href="/Monsters"
+        class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900 text-yellow-50">Monsters</a>
+    <a href="/Locations"
+        class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900 text-yellow-50">Locations</a>
 </nav>
-
-<!--Menu com diversas listas, dividir em sessões ao dar hover e separar as diversas sessões com links utilizando o CSS, tailwind aqui no caso-->
