--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <nav class="flex left space-x-4 bg-gray-500">
     <a href="#"
         class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900 text-yellow-50">Home</a>
-    <a href="/MonHunDex"
+    <a href="/monhundex"
         class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900 text-yellow-50">MonHunDex</a>
-    <a href="/Monsters"
+    <a href="/monsters"
         class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900 text-yellow-50">Monsters</a>
-    <a href="/Locations"
+    <a href="/locations"
         class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900 text-yellow-50">Locations</a>
 </nav>
