Create daily monster table

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<table class="table-fixed border-solid border-2">
+    <thead>
+        <th class="text-center">Daily Monster</th>
+    </thead>
+    <tbody>
+        <tr class="border-solid border-2">
+            <td class="text-center">Rathalos</td>
+        </tr>
+        <tr class="border-solid border-2"><img
+                src="//archives.bulbagarden.net/media/upload/thumb/a/a7/196Espeon.png/250px-196Espeon.png"
+                alt="Rathinho">
+        </tr>
+        <tr class="border-solid border-2 text-center">Flying Wyvern</tr>
+    </tbody>
+</table>
