--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Sono:wght@500;600;700&display=swap');
