Create info table on homepage | lorem ipsum placeholder

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,23 @@
+<div class="flex justify-center">
+    <table class="table-fixed border-solid border-2 content-center w-6/12">
+        <tbody>
+            <tr class="text-center text-4xl">
+                Welcome to MonHunDex
+            </tr>
+            <tr class="text-justify">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In imperdiet risus libero, id gravida magna
+                convallis sit amet. Vivamus eget orci nec diam condimentum maximus a et orci. Sed eget euismod urna. Ut
+                sagittis vulputate ex, nec rhoncus nibh suscipit ac. Vestibulum ac orci vel ex laoreet sodales quis non
+                ex. Sed hendrerit fringilla mi. Morbi fringilla, tortor ac euismod venenatis, quam elit venenatis
+                lectus, sed vehicula libero urna gravida tortor. Fusce gravida rhoncus nulla, nec fermentum nunc
+                efficitur in. In hac habitasse platea dictumst. Nulla leo sapien, lobortis a lacus a, pellentesque
+                scelerisque dui. Nulla facilisi. Nunc tempus placerat ullamcorper. Quisque elementum nibh non finibus
+                congue. Ut vel viverra ipsum.
+            </tr>
+        </tbody>
+    </table>
+</div>
+<br>
 <table class="table-fixed border-solid border-2">
     <thead>
         <th class="text-center">Daily Monster</th>
