--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="flex left space-x-4 bg-gray-500">
+<nav class="flex left space-x-4 bg-gray-500 w-full">
     <a href="#"
         class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900 text-yellow-50">Home</a>
     <a href="/monhundex"
