Start wrapping home page template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <app-header></app-header>
 
-<body>
-    <router-outlet></router-outlet>
+<body class="flex justify-center py-11 bg-placeholder-bgi h-full">
+    <div class="w-10/12 border-solid border-4 border-red-500 rounded-md">
+        <router-outlet></router-outlet>
+    </div>
 </body>
+
 <app-footer></app-footer>
