--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-center">
-    <table class="table-fixed border-solid border-2 content-center w-6/12">
+    <table class="table-fixed border-solid border-2 border-sky-500 content-center w-6/12">
         <tbody>
             <tr class="text-center text-4xl">
                 Welcome to MonHunDex
@@ -18,18 +18,18 @@
     </table>
 </div>
 <br>
-<table class="table-fixed border-solid border-2">
+<table class="table-fixed border-solid border-2 border-sky-500">
     <thead>
         <th class="text-center">Daily Monster</th>
     </thead>
     <tbody>
-        <tr class="border-solid border-2">
+        <tr class="border-solid border-2 border-sky-500">
             <td class="text-center">Rathalos</td>
         </tr>
-        <tr class="border-solid border-2"><img
+        <tr class="border-solid border-2 border-sky-500"><img
                 src="//archives.bulbagarden.net/media/upload/thumb/a/a7/196Espeon.png/250px-196Espeon.png"
                 alt="Rathinho">
         </tr>
-        <tr class="border-solid border-2 text-center">Flying Wyvern</tr>
+        <tr class="border-solid border-2 text-center border-sky-500">Flying Wyvern</tr>
     </tbody>
 </table>
