Set max and min size for daily monster table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<body class="flex justify-center py-11 bg-placeholder-bgi h-full">
+<body class="flex justify-center py-11 bg-placeholder-bgi h-screen">
     <div class="w-10/12 border-solid border-4 border-red-500 rounded-md">
         <router-outlet></router-outlet>
     </div>
