--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
     </table>
 </div>
 <br>
-<table class="table-fixed border-solid border-2 border-sky-500">
+<table class="table-fixed border-solid border-2 border-sky-500 w-1/6 min-w-1/12 max-w-sm">
     <thead>
         <th class="text-center">Daily Monster</th>
     </thead>
