--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="flex justify-center">
-    <table class="table-fixed border-solid border-2 border-sky-500 content-center w-6/12">
+<div class="flex justify-center pt-2">
+    <table class="table-fixed border-solid border-2 border-sky-500 content-center w-10/12">
         <tbody>
             <tr class="text-center text-4xl">
                 Welcome to MonHunDex
@@ -18,18 +18,39 @@
     </table>
 </div>
 <br>
-<table class="table-fixed border-solid border-2 border-sky-500 w-1/6 min-w-1/12 max-w-sm">
-    <thead>
-        <th class="text-center">Daily Monster</th>
-    </thead>
-    <tbody>
-        <tr class="border-solid border-2 border-sky-500">
-            <td class="text-center">Rathalos</td>
-        </tr>
-        <tr class="border-solid border-2 border-sky-500"><img
-                src="//archives.bulbagarden.net/media/upload/thumb/a/a7/196Espeon.png/250px-196Espeon.png"
-                alt="Rathinho">
-        </tr>
-        <tr class="border-solid border-2 text-center border-sky-500">Flying Wyvern</tr>
-    </tbody>
-</table>
+<hr class="border-solid border-t-2 border-black" id="division-line">
+<br>
+<div class="flex relative right-0" id="daily-monster">
+    <table class="table-fixed border-solid border-2 border-sky-500 w-1/6 min-w-1/12 max-w-sm">
+        <thead>
+            <th class="text-center">Daily Monster</th>
+        </thead>
+        <tbody>
+            <tr class="border-solid border-2 border-sky-500">
+                <td class="text-center">Rathalos</td>
+            </tr>
+            <tr class="border-solid border-2 border-sky-500"><img
+                    src="//archives.bulbagarden.net/media/upload/thumb/a/a7/196Espeon.png/250px-196Espeon.png"
+                    alt="Rathinho">
+            </tr>
+            <tr class="border-solid border-2 text-center border-sky-500">Flying Wyvern</tr>
+        </tbody>
+    </table>
+
+    <div id="daily-monster-info">
+        <h2 class="text-2xl division border-solid border-b-2 border-grey">
+            <p>Description</p>
+        </h2>
+        <p>Terrible wyverns called "Kings of the Skies". Along with Rathians, they stake wide territories centered
+            around their nests. Rathalos descend on invaders from the sky, attacking with poison claws and breath of
+            fire.</p>
+        <h2 class="text-2xl division border-solid border-b-2 border-grey">
+            <p>Behavior</p>
+        </h2>
+        <p>Rathalos are highly territorial monsters, and as such, are aggressive towards intruders. They will chase away
+            or attempt to kill any monster which may pose a threat to their land. While hunting, Rathalos will stalk
+            prey from the air before swooping in for the kill. Once they have successfully brought down their prey, they
+            will carry it away to eat in private, safe from scavengers or other large monsters which might attempt to
+            steal the kill. </p>
+    </div>
+</div>
