--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
-<div id="content-container h-screen">
+<div id="content-container">
     <app-header></app-header>
 
-    <body class="flex justify-center py-11 bg-placeholder-bgi">
-        <div class="w-10/12 border-solid border-4 border-red-500 rounded-md h-full">
+    <body class="flex justify-center py-11 h-screen">
+        <div class="w-10/12 border-solid border-4 border-red-500 rounded-md">
             <router-outlet></router-outlet>
         </div>
     </body>
-
     <app-footer></app-footer>
 </div>
