Add new home navigation menu to redirect to other pages

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -96,3 +96,20 @@
             steal the kill. </p>-->
     </div>
 </div>
+<div class="flex justify-center">
+    <nav class="flex left space-x-4 border rounded fixed h-10 content-center">
+        <a href="#"
+            class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900">Monsters</a>
+        <a href="/monhundex"
+            class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900">Locations</a>
+        <a href="/monsters"
+            class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900">Elements</a>
+        <a href="/locations"
+            class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900">Ailments</a>
+        <a href="/locations"
+            class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900">Monster
+            Classes</a>
+        <a href="/locations"
+            class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900">Moves</a>
+    </nav>
+</div>
