--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -98,18 +98,18 @@
 </div>
 <div class="flex justify-center">
     <nav class="flex left space-x-4 border rounded fixed h-10 content-center">
-        <a href="#"
+        <a href="monsters"
             class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900">Monsters</a>
-        <a href="/monhundex"
+        <a href="/locations"
             class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900">Locations</a>
-        <a href="/monsters"
+        <a href="/elements"
             class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900">Elements</a>
-        <a href="/locations"
+        <a href="/ailments"
             class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900">Ailments</a>
-        <a href="/locations"
+        <a href="/monster-classes"
             class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900">Monster
             Classes</a>
-        <a href="/locations"
+        <a href="/moves"
             class="font-medium px-3 py-2 text-slate-700 rounded-lg hover:underline hover:text-slate-900">Moves</a>
     </nav>
 </div>
