start the monster list page development

--- a/src/app/monsters/monsters.component.html
+++ b/src/app/monsters/monsters.component.html
@@ -1,1 +1,18 @@
-<p>monsters works!</p>
+<div class="flex justify m-1">
+    <table class="table-fixed border-2 border-black-500 content-center">
+        <thead>
+            <th class="text-center">Name</th>
+        </thead>
+        <tbody>
+            <tr class="border-solid border-2">
+                <td class="text-center">img</td>
+            </tr>
+            <tr class="border-solid border-2 border-black-500">
+                <td>Type</td>
+            </tr>
+            <tr class="border-solid border-2 border-black-500">
+                <td>Elements</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
