Create grid to show monster list

--- a/src/app/monsters/monsters.component.html
+++ b/src/app/monsters/monsters.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify m-1">
+<div class="flex justify m-1 grid gap-4 grid-cols-8">
     <table *ngFor="let monster of monsters" class="table-fixed border-2 border-black-500 content-center m-2">
         <thead>
             <th class="text-center">{{monster.name}}</th>
