Get icon image when displaying monster list

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,7 @@
                 <td class="text-center">Rathalos</td>
             </tr>
             <tr class="border-solid border-2 border-sky-500"><img
-                    src="//archives.bulbagarden.net/media/upload/thumb/a/a7/196Espeon.png/250px-196Espeon.png"
+                    src="https://static.wikia.nocookie.net/monsterhunter/images/b/b5/MH10th-Basarios_Icon.png"
                     alt="Rathinho">
             </tr>
             <tr class="border-solid border-2 text-center border-sky-500">Flying Wyvern</tr>
