--- a/src/app/monsters/monsters.component.html
+++ b/src/app/monsters/monsters.component.html
@@ -5,9 +5,7 @@
         </thead>
         <tbody>
             <tr class="border-solid border-2">
-                <td class="text-center"><img
-                        src="//archives.bulbagarden.net/media/upload/thumb/a/a7/196Espeon.png/250px-196Espeon.png"
-                        alt="Rathinho"></td>
+                <td class="text-center"><img src="{{monster.iconUrl}}" alt="Rathinho"></td>
             </tr>
             <tr class="border-solid border-2 border-black-500">
                 <td>{{monster.monsterClassId}}</td>
